k8s/colis-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: colis-service-netpol
  namespace: livraison
spec:
  podSelector:
    matchLabels:
      app: colis-service
  policyTypes:
    - Ingress
  ingress:
    # Seul l'api-gateway peut appeler le colis-service (Zero Trust réseau)
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 8082
